feat: use skekleton state popup and henkan highlight plugins

--- a/modules/home-manager/vime/nvfetcher.toml
+++ b/modules/home-manager/vime/nvfetcher.toml
@@ -6,6 +6,14 @@ fetch.github = "vim-denops/denops.vim"
 src.git = "https://github.com/vim-skk/skkeleton.git"
 fetch.github = "vim-skk/skkeleton"
 
+[skkeleton-state-popup]
+src.git = "https://github.com/NI57721/skkeleton-state-popup.git"
+fetch.github = "NI57721/skkeleton-state-popup"
+
+[skkeleton-henkan-highlight]
+src.git = "https://github.com/NI57721/skkeleton-henkan-highlight.git"
+fetch.github = "NI57721/skkeleton-henkan-highlight"
+
 [skk-dict]
 src.git = "https://github.com/skk-dev/dict.git"
 fetch.github = "skk-dev/dict"
